--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
       <div class="flex items-center space-x-1.5">
       </div>
       <div class="flex items-center space-x-4">
-        <p class="text-sm text-[var(--accent-color)]">Zero One</p>
+        <p class="text-sm text-[var(--accent-color)]">Time</p>
         <div id="clock" class="text-sm text-[var(--secondary-color)]"></div>
       </div>
     </div>
@@ -214,13 +214,13 @@
       <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
         <div class="md:col-span-1 flex flex-col items-center space-y-4">
           <div class="w-48 h-48 rounded-full p-1 border-2 border-dashed border-[var(--accent-color)] glow-box">
-            <img src="https://i.pinimg.com/1200x/40/68/54/40685427a5ee1ef5dd564a3b900eb30e.jpg" alt="Avatar" class="w-full h-full rounded-full object-cover" />
+            <img src="https://i.ibb.co.com/vC6LhSCR/c4f9ee10-4669-419f-ac56-48fd17928e72.jpg" alt="Avatar" class="w-full h-full rounded-full object-cover" />
           </div>
-          <h1 class="font-game text-3xl text-center glow-text typing-effect">hlounh</h1>
+          <h1 class="font-game text-3xl text-center glow-text typing-effect">siZhens</h1>
           <div class="w-full p-4 border border-[var(--border-color)] rounded-md hover-effect">
             <h2 class="font-game text-lg text-[var(--secondary-color)] mb-2">STATS</h2>
             <ul class="space-y-1 text-sm">
-              <li><strong>Age:</strong>21</li>
+              <li><strong>Umur:</strong>21</li>
               <li><strong>Status:</strong>Busy</li>
               <li><strong>Wilayah:</strong>Id</li>
             </ul>
@@ -266,7 +266,7 @@
             </div>
             
             <div class="p-4 border border-[var(--border-color)] rounded-md hover-effect">
-              <h2 class="font-bold text-lg text-[var(--secondary-color)] mb-3">KỸ NĂNG</h2>
+              <h2 class="font-bold text-lg text-[var(--secondary-color)] mb-3">KEAHLIAN</h2>
               <div class="space-y-3">
                 <div>
                   <div class="flex justify-between">
@@ -290,7 +290,7 @@
                 
                 <div>
                   <div class="flex justify-between">
-                    <span>Thiết kế</span>
+                    <span>Designer</span>
                     <span>25%</span>
                   </div>
                   <div class="skill-bar bg-[var(--accent-color)] bg-opacity-30">
