--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
             </div>
             
             <div class="p-4 border border-[var(--border-color)] rounded-md hover-effect">
-              <h2 class="font-bold text-lg text-[var(--secondary-color)] mb-3">KEAHLIAN</h2>
+              <h2 class="font-bold text-lg text-[var(--secondary-color)] mb-3">SKILLS</h2>
               <div class="space-y-3">
                 <div>
                   <div class="flex justify-between">
