--- a/index.html
+++ b/index.html
@@ -287,6 +287,16 @@
                     <div class="progress-bar h-full rounded" style="width: 50%"></div>
                   </div>
                 </div>
+
+                <div>
+                  <div class="flex justify-between">
+                    <span>Lua</span>
+                    <span>90%</span>
+                  </div>
+                  <div class="skill-bar bg-[var(--accent-color)] bg-opacity-30">
+                    <div class="progress-bar h-full rounded" style="width: 50%"></div>
+                  </div>
+                </div>
                 
                 <div>
                   <div class="flex justify-between">
